tests/baselines/reference/importCallExpressionInScriptContext1.errors.txt
1.ts(2,10): error TS1100: Invalid use of 'arguments' in strict mode.


==== 0.ts (0 errors) ====
    export function foo() { return "foo"; }
    
==== 1.ts (1 errors) ====
    var p1 = import("./0");
    function arguments() { } // this is allow as the file doesn't have implicit "use strict"
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.